--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,21 +6,55 @@
     <title>Formulario de Login</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="./js/script.js" defer></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script></head>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="./js/validate-form.js" defer></script>
+</head>
 <body>
-    <div class="login-container">
+    <div class="form-container">
+        <h2>Daniel Castellanos</h2>
         <form id="loginForm" class="login-form">
-            <h2>Daniel Castellanos</h2>
             <div class="input-group">
                 <label for="username">Usuario</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
             </div>
-                <div class="g-recaptcha" data-sitekey="6LeU44orAAAAAAGY_azEZWKsy6QojQTWZWju7ute" data-callback="onCaptchaSuccess"></div>
-            <button type="submit">Enviar</button>
+            <div class="error-message">
+                <span id="emailError"></span>
+            </div>
+            <div class="input-group">
+                <label for="password">Contraseña</label>
+                <div class="password-container">
+                    <input type="password" id="password" name="password" required>
+                    <button class="togglePassword" id="togglePassword">👁️</button>
+                </div>
+            </div>
+            <div id="passwordRules">
+                <ul id="passwordRules">
+                    <li class="rule" id="longitud">Mínimo 8 caracteres</li>
+                    <li class="rule" id="mayuscula">Al menos una letra mayúscula</li>
+                    <li class="rule" id="minuscula">Al menos una letra minúscula</li>
+                    <li class="rule" id="numero">Al menos un número</li>
+                    <li class="rule" id="especial">Al menos un carácter especial <span>!@#$%^&*(),.?":{}|&lt&gt </span></li>
+                </ul>
+            </div>
+            <div class="input-group">
+                <label for="confirmPassword">Confirmar Contraseña</label>
+                <div class="password-container">    
+                    <input type="password" id="confirmPassword" name="confirmPassword" required disabled>
+                    <button class="togglePassword" id="toggleConfirm">👁️</button>
+                </div>
+            </div>
+            <div class="error-message">
+                <span id="passwordMatchError"></span>
+            </div>
+            <div class="input-group">
+                <div class="g-recaptcha" data-callback="validateFields"
+                     data-expired-callback="onRecaptchaExpired" data-sitekey="6LeU44orAAAAAAGY_azEZWKsy6QojQTWZWju7ute">
+                </div>
+            <button id="submitBtn" type="submit" disabled>Enviar</button>
         </form>
     </div>
     <!-- recaptcha v3 -->
